<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Argus</string>
    <string name="welcome">Welcome to Argus</string>
    <string name="authenticate">Authenticate</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="create_pin">Create Pin</string>
    <string name="change_pin">Change Pin</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_computers">My Devices</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="enter_computer_name">Enter Computer Name</string>
    <string name="enter_ip_address">Enter IP Address</string>
    <string name="title_activity_control">Controls</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_screenshot">Screenshot</string>
    <string name="screenshot">Screenshot</string>
    <string name="take_screenshot">Take Screenshot</string>
    <string name="title_activity_webcam">Webcam</string>
    <string name="take_picture">Take Picture</string>
    <string name="webcam_picture">Webcam Picture</string>
    <string name="title_activity_usb">USB Controls</string>
    <string name="read_write_enabled">Read/Write Enabled</string>
    <string name="read_only">Read Only</string>
    <string name="usb_disabled">USB Disabled</string>
    <string name="apply_settings">Apply Settings</string>
    <string name="title_activity_message">Message</string>
    <string name="send_message">Send Message</string>
    <string name="title_activity_power">Power Options</string>
    <string name="lock">Lock</string>
    <string name="shutdown">Shutdown</string>
    <string name="restart">Restart</string>
    <string name="hibernate">Hibernate</string>
    <string name="apply_power_settings">Do</string>
    <string name="title_activity_qrreader">Point at QR Code</string>
    <string name="title_activity_intruder">User Photo</string>
    <string name="intruder_picture">Intruder Picture</string>
    <string name="check_computer">Check Computer</string>
    <string name="title_activity_keylogger">Keylogger</string>
    <string name="select_date">Select Date</string>
    <string name="get_logs">Get Logs</string>

</resources>
