<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sour.project.be.PowerActivity" >

    <RadioGroup
        android:id="@+id/rgPowerOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/rbPower0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:checked="true"
            android:gravity="center"
            android:text="@string/lock" />

        <RadioButton
            android:id="@+id/rbPower1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/shutdown" />

        <RadioButton
            android:id="@+id/rbPower2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/restart" />

        <RadioButton
            android:id="@+id/rbPower3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/hibernate" />
    </RadioGroup>

    <Button
        android:id="@+id/btnApplyPower"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rgPowerOptions"
        android:layout_marginTop="10dp"
        android:text="@string/apply_power_settings" />

</RelativeLayout>