<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sour.project.be.UsbActivity" >

    <RadioGroup
        android:id="@+id/rgUsbOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/rbUsb1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:checked="true"
            android:gravity="center"
            android:text="@string/read_write_enabled" />

        <RadioButton
            android:id="@+id/rbUsb2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/read_only" />

        <RadioButton
            android:id="@+id/rbUsb3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/usb_disabled" />
    </RadioGroup>

    <Button
        android:id="@+id/btnApplyUsb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rgUsbOptions"
        android:layout_marginTop="10dp"
        android:text="@string/apply_settings" />

</RelativeLayout>