<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sour.project.be.MainActivity" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/main_bg" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="#88000000" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <View
            android:id="@+id/fakeView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/tvTerms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/fakeView"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/tvTerms"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="#fff"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fakeView"
            android:layout_marginTop="30dp"
            android:padding="15dp"
            android:text="@string/authenticate"
            android:textColor="@color/white" />
    </RelativeLayout>

</FrameLayout>